[package]
name = "leafish"
version = "0.1.0"
authors = [ "Thinkofdeath <thinkofdeath@spigotmc.org>", "iceiix <ice_ix@protonmail.ch>", "terrarier2111" ]
edition = "2018"
resolver = "2"
description = "Multi-protocol multi-platform Minecraft-compatible client"
repository = "https://github.com/Lea-fish/Leafish"
license = "MIT/Apache-2.0"

[package.metadata.bundle]
name = "Leafish"
identifier = "com.github.Lea-fish.Leafish"
icon = ["resources/icon*.png"]
category = "Game"
osx_minimum_system_version = "10.14"

[profile.dev]
split-debuginfo = "unpacked"
# Steven runs horrendously slow with no optimizations, and often freezes.
# However, building with full -O3 optimizations takes too long for a debug build.
# Use an -O1 optimization level strikes a good compromise between build and program performance.
opt-level = 1
incremental = true

[profile.release]
incremental = true

[features]
wgpu-mc = ["dep:wgpu-mc", "dep:futures", "dep:glam"]

[dependencies]
winit = { version = "0.30", features = ["rwh_06", "serde"] }
raw-window-handle = "0.6.0"

# wgpu-mc renderer (optional, enable with --features wgpu-mc)
wgpu-mc = { path = "./wgpu-mc/rust/wgpu-mc", optional = true }
futures = { version = "0.3", optional = true }
glam = { version = "0.29", optional = true }
glow = "0.17"
byteorder = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
zip = { version = "2", features = ["deflate"], default-features = false }
image = "0.25"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9"
rand_pcg = "0.9"
base64 = "0.22"
log = { version = "0.4", features = ["std"] }
cgmath = "0.17"
lazy_static = "1.4" # TODO: get rid of this and use OnceCell instead
collision = "0.20"
rsa_public_encrypt_pkcs1 = "0.4"
structopt = "0.3"
copypasta = "0.10"
instant = "0.1"
dirs = "6.0"

# Concurrency features
dashmap = "6.1"
parking_lot = "0.12"
atomic_float = "1.1.0"
# arc-swap = "1.4.0" # TODO: Use this!
crossbeam-channel = "0.5" # check if flume would be better in terms of performance!
# flume = "0.10.8" # replaced by crossbeam channel
# tokio = { version = "0.2", features = ["full"] } # readd as soon as we want to impl this!
rayon = "1.5"
rfd = "0.17"
bevy_ecs = "0.15"

reqwest = { version = "0.12", features = [ "blocking" ]}
# glutin = "0.29"
glutin = "0.32"
glutin-winit = "0.5"

arc-swap = "1.7.0"
# phf = "0.11"

[dependencies.leafish_resources]
path = "./resources"
version = "0"

[dependencies.leafish_blocks]
path = "./blocks"
version = "0"

[dependencies.leafish_shared]
path = "./shared"
version = "0"

[dependencies.leafish_protocol]
path = "./protocol"
version = "0"

[[test]]
name = "protocol_1_20_4"
path = "probes/protocol_1_20_4.rs"
